Add dark/light mode toggle with localStorage persistence
- Added theme toggle button with 🌙/☀️ icons
- CSS custom properties for seamless theme switching
- Dark mode with improved calendar visibility
- Glassmorphism effects on toggle button
- Preference persists across sessions

--- a/projects/habit-tracker/tracker.html
+++ b/projects/habit-tracker/tracker.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button class="dark-mode-toggle" id="darkModeToggle">
+        <span id="darkModeIcon">🌙</span>
+        <span id="darkModeText">Dark</span>
+    </button>
+    
     <div class="container">
         <header>
             <h1>🎯 Habit Tracker</h1>
