--- a/index.html
+++ b/index.html
@@ -356,6 +356,18 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/medicare.png" class="img-fluid portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>Medicare AI</h4>
+                  <p>AI-powered clinical platform for automated documentation and real-time patient insights.</p>
+                  <a href="assets/img/portfolio/medicare.png" title="Medicare AI" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://medicare-pi-inky.vercel.app" title="View Live" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <!--
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
