--- a/portfolio.html
+++ b/portfolio.html
@@ -680,6 +680,58 @@
 				
 					</div>
 				</div>
+		<div class="elementor-element elementor-element-mc7r2pxq e-con-full e-flex e-con e-parent" data-id="mc7r2pxq" data-element_type="container">
+				<div class="elementor-element elementor-element-nt8w3klp elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-widget elementor-widget-image" data-id="nt8w3klp" data-element_type="widget" data-widget_type="image.default">
+				<div class="elementor-widget-container">
+															<img loading="lazy" width="1365" height="1024" src="assets/img/portfolio/medicare.png" class="attachment-full size-full wp-image-26643" alt="" />															</div>
+				</div>
+		<div class="elementor-element elementor-element-vf6y8m2w e-con-full e-flex e-con e-parent" data-id="vf6y8m2w" data-element_type="container">
+				<div class="elementor-element elementor-element-pd3t7nxa elementor-invisible elementor-widget elementor-widget-heading" data-id="pd3t7nxa" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
+				<div class="elementor-widget-container">
+					<h5 class="elementor-heading-title elementor-size-default">Medicare AI</h5>				</div>
+				</div>
+				<div class="elementor-element elementor-element-qw9e5hrf elementor-invisible elementor-widget elementor-widget-text-editor" data-id="qw9e5hrf" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="text-editor.default">
+				<div class="elementor-widget-container">
+									A full-stack AI-powered clinical platform that builds a persistent medical intelligence layer for every patient &mdash; bridging the gap between doctor and patient through automated documentation, real-time diagnostic insights, and seamless one-click medical context sharing.											</div>
+				</div>
+				<div class="elementor-element elementor-element-bx4r6jmn elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-align-left elementor-icon-list--layout-inline elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list" data-id="bx4r6jmn" data-element_type="widget" data-widget_type="icon-list.default">
+				<div class="elementor-widget-container">
+							<ul class="elementor-icon-list-items elementor-inline-items">
+							<li class="elementor-icon-list-item elementor-inline-item">
+											<span class="elementor-icon-list-icon">
+							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
+										<span class="elementor-icon-list-text">Completed in February 2026</span>
+									</li>
+								<li class="elementor-icon-list-item elementor-inline-item">
+										<span class="elementor-icon-list-icon">
+							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
+									<span class="elementor-icon-list-text">Technologies: Next.js, React, Tailwind CSS, shadcn/ui, Clerk, Convex</span>
+								</li>
+								<li class="elementor-icon-list-item elementor-inline-item">
+										<span class="elementor-icon-list-icon">
+							<i aria-hidden="true" class="fas fa-hashtag"></i>						</span>
+									<span class="elementor-icon-list-text">Deployed on Vercel + Convex Cloud</span>
+								</li>
+						</ul>
+						</div>
+				</div>
+				<div class="elementor-element elementor-element-hy7m3w9k elementor-align-left elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="hy7m3w9k" data-element_type="widget" data-widget_type="button.default">
+				<div class="elementor-widget-container">
+									<div class="elementor-button-wrapper">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://medicare-pi-inky.vercel.app">
+						<span class="elementor-button-content-wrapper">
+						<span class="elementor-button-icon">
+				<i aria-hidden="true" class="fas fa-angle-right"></i>			</span>
+									<span class="elementor-button-text">View Project</span>
+					</span>
+					</a>
+				</div>
+								</div>
+				</div>
+				</div>
+				</div>
+				</div>
+				</div>
 		<div class="elementor-element elementor-element-1cksb8qs twbb_section e-con-boxed e-flex e-con e-parent" data-id="1cksb8qs" data-element_type="container" id="skills" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-0lbs2qsd elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial elementor-invisible elementor-widget elementor-widget-heading" data-id="0lbs2qsd" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
